[package]
name = "macroquad_xcodebuild_example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
macroquad = { version = "0.3.13", default-features = false }

[package.metadata.ios]
build_targets = ["aarch64-apple-ios", "aarch64-apple-ios-sim", "x86_64-apple-ios"]
dependencies = ["OpenGLES.framework", "GLKit.framework", "Security.framework", "UIKit.framework"]
